--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
   <app-header></app-header>
+ <!--
+   <app-sofcode></app-sofcode>
+ -->
+  <router-outlet></router-outlet>
 </div>
 
