--- a/src/app/pages/checkout/details/details.component.html
+++ b/src/app/pages/checkout/details/details.component.html
@@ -18,8 +18,12 @@
         </tr>
     </tbody>
     
-
     </table>
+    <div class="container__total">
+        <p class="total">
+            <strong>Total: <span>7888$</span></strong>
+        </p>
+    </div>
 
 
 </div>
