--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <form class="form item">
+    <form class="form item" #checkoutForm="ngForm">
         <mat-form-field class="form_element" >
             <input
             matInput
@@ -16,59 +16,68 @@
 
         </mat-form-field>
         <!--Radio button-->
+        {{isDelivery}} - isDelivery?
         <mat-radio-group class="form_element">
             <p> Choose an option: </p>
-            <mat-radio-button value="pickup" (change)="onPickupOrDelivery(false)"
+            <mat-radio-button value="pickup" (change)="onPickupOrDelivery(false) " checked
             > Pickup </mat-radio-button>
             
             <mat-radio-button value="delivery" (change)="onPickupOrDelivery(true)"
             > Delivery </mat-radio-button>
         
         </mat-radio-group>
-        <!--Campo para la dirección-->
-        <mat-form-field class="form_element">
-            <input
-            matInput
-            placeholder="Shipping Address"
-            [(ngModel)]="model.shippingAddress"
-            name="shippingAddress"
-            #shippingAddress="ngModel"
-            />
-        </mat-form-field>
-        <!--Campo de ciudad-->
-        <mat-form-field class="form_element">
-            <input
-            matInput
-            placeholder="City"
-            [(ngModel)]="model.city"
-            name="city"
-            #city="ngModel"
-            />
-        </mat-form-field>
 
-        <!--Apartado de tiendas-->
-        <mat-form-field class="form_element">
-            <mat-label>Select me</mat-label>
-            <mat-select 
-            name="store"
-            #store="ngModel"
-            [(ngModel)]="model.store">
-                <mat-option [value]="tienda" *ngFor="let tienda of stores"> 
-                    {{tienda.name}} - {{tienda.openingHours}}
-                </mat-option>
-                
-            </mat-select>
-        </mat-form-field>
+        <ng-container *ngIf="isDelivery; else showStores">
+            <!--Campo para la dirección-->
+            <mat-form-field class="form_element">
+                <input
+                matInput
+                placeholder="Shipping Address"
+                [(ngModel)]="model.shippingAddress"
+                name="shippingAddress"
+                #shippingAddress="ngModel"
+                />
+            </mat-form-field>
+            <!--Campo de ciudad-->
+            <mat-form-field class="form_element">
+                <input
+                matInput
+                placeholder="City"
+                [(ngModel)]="model.city"
+                name="city"
+                #city="ngModel"
+                />
+            </mat-form-field>
+        </ng-container>
+    
+        <ng-template #showStores>
+            <!--Apartado de tiendas-->
+            <mat-form-field class="form_element">
+                <mat-label>Select me</mat-label>
+                <mat-select 
+                name="store"
+                #store="ngModel"
+                [(ngModel)]="model.store">
+                    <mat-option [value]="tienda" *ngFor="let tienda of stores"> 
+                        {{tienda.name}} - {{tienda.openingHours}}
+                    </mat-option>
+                    
+                </mat-select>
+            </mat-form-field>
+        </ng-template>
+
+        
     </form>
 </div>
 <app-details></app-details>
 
 <div class="container__button">
     <button 
-    [disabled]=""
+    [disabled]="!checkoutForm.form.valid"
     mat-raised-button
     color="primary"
     type="submit"
+    (click) ="onSubmit(checkoutForm)"
     >
         Checkout
     </button>
